<resources>
    <string name="app_name">Book of Dinos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="test">test</string>
    <string name="search">Search</string>
    <string-array name="dinosaur_names_array">

        
        <item>Ankylosaurus</item>

        
        <item>Argentinosaurus</item>

        
        <item>Brontosaurus</item>

        
        <item>Dilophosaurus</item>

        
        <item>Giganotosaurus</item>

        
        <item>Leedsichthys</item>

        
        <item>Mosasaurus</item>

        
        <item>Pteranodon</item>

        
        <item>Quetzalcoatlus</item>

        
        <item>Spinosaurus</item>

        
        <item>Stegosaurus</item>

        
        <item>Therizinosaurus</item>

        
        <item>Triceratops</item>

        
        <item>T-Rex</item>

        
        <item>Velociraptor</item>
    </string-array>
    <string-array name="dinosaur_badge_names_array">

        
        <item>Ankylosaurus Badge</item>

        
        <item>Argentinosaurus Badge</item>

        
        <item>Brontosaurus Badge</item>

        
        <item>Dilophosaurus Badge</item>

        
        <item>Giganotosaurus Badge</item>

        
        <item>Leedsichthys Badge</item>

        
        <item>Mosasaurus Badge</item>

        
        <item>Pteranodon Badge</item>

        
        <item>Quetzalcoatlus Badge</item>

        
        <item>Spinosaurus Badge</item>

        
        <item>Stegosaurus Badge</item>

        
        <item>Therizinosaurus Badge</item>

        
        <item>Triceratops Badge</item>

        
        <item>T-Rex Badge</item>

        
        <item>Velociraptor Badge</item>
    </string-array>
    <string-array name="quiz_names_array">

        
        <item>Ankylosaurus Quiz</item>

        
        <item>Argentinosaurus Quiz</item>

        
        <item>Brontosaurus Quiz</item>

        
        <item>Dilophosaurus Quiz</item>

        
        <item>Giganotosaurus QUiz</item>

        
        <item>Leedsichthys Quiz</item>

        
        <item>Mosasaurus Quiz</item>

        
        <item>Pteranodon Quiz</item>

        
        <item>Quetzalcoatlus Quiz</item>

        
        <item>Spinosaurus Quiz</item>

        
        <item>Stegosaurus Quiz</item>

        
        <item>Therizinosaurus Quiz</item>

        
        <item>Triceratops Quiz</item>

        
        <item>T-Rex Quiz</item>

        
        <item>Velociraptor Quiz</item>
    </string-array>
    <string-array name="years_facts_array">

        
        <item>70 – 66 million years ago</item>

        
        <item>97 – 93 million years ago</item>

        
        <item>157 – 145 million years ago</item>

        
        <item>201 – 174 million years ago</item>

        
        <item>99 – 97 million years ago</item>

        
        <item>165 – 145 million years ago</item>

        
        <item>82 – 66 million years ago</item>

        
        <item>100 – 90 million years ago</item>

        
        <item>72 – 66 million years ago</item>

        
        <item>100 – 95 million years ago</item>

        
        <item>150 – 145 million years ago</item>

        
        <item>72 – 68 million years ago</item>

        
        <item>69 – 66 million years ago</item>

        
        <item>68 – 66 million years ago</item>

        
        <item>74 – 70 million years ago</item>
    </string-array>
    <string-array name="speed_facts_array">

        
        <item>6 miles per hour</item>

        
        <item>5 miles per hour</item>

        
        <item>19 miles per hour</item>

        
        <item>20 miles per hour</item>

        
        <item>31 miles per hour</item>

        
        <item>11 miles per hour</item>

        
        <item>30 miles per hour</item>

        
        <item>70 miles per hour</item>

        
        <item>80 miles per hour</item>

        
        <item>17 miles per hour</item>

        
        <item>5 miles per hour</item>

        
        <item>15 miles per hour</item>

        
        <item>20 miles per hour</item>

        
        <item>20 miles per hour</item>

        
        <item>25 miles per hour</item>
    </string-array>
    <string-array name="name_meanings_array">

        
        <item>Fused Lizard</item>

        
        <item>Argentina Lizard</item>

        
        <item>Thunder Lizard</item>

        
        <item>Two-Crested Lizard</item>

        
        <item>Giant Southern Lizard</item>

        
        <item>Leed\'s Fish</item>

        
        <item>Lizard of the Meuse River</item>

        
        <item>Winged and Toothless</item>

        
        <item>Feathered Serpent</item>

        
        <item>Spine Lizard</item>

        
        <item>Roof Lizard</item>

        
        <item>Scythe Lizard</item>

        
        <item>Three-Horned Lizard</item>

        
        <item>King of the Tyrant Lizards</item>

        
        <item>Quick Plunderer</item>
    </string-array>
    <string name="dinosaur_image">dinosaur image</string>
    <string name="answer">answer</string>
    <string name="next">Next</string>
    <string name="quiz">Quiz</string>
    <string name="finish">finish</string>
    <string name="you_passed">YOU PASSED</string>
    <string name="you_failed">YOU FAILED</string>
    <string name="quiz_percent">%1$d%%</string>
    <string name="profile_default">Default</string>
    <string name="select">Select</string>
    <string name="experience_fraction">%1$d/100</string>
    <string name="mesozoic_era">Mesozoic Era</string>
    <string name="time_period">Time Period</string>
    <string name="_252to66_million_years_ago">252 – 66 million years ago</string>
    <string name="meaning">Meaning</string>
    <string name="middle_life">Middle Life</string>
    <string name="nickname">Nickname</string>
    <string name="age_of_dinosaurs">Age of Dinosaurs</string>
    <string name="periods">Periods</string>
    <string name="triassic_jurassic_cretaceous">Triassic / Jurassic / Cretaceous</string>
    <string name="mesozoic_info_text">Earth has had three eras: the Paleozoic Era, the Mesozoic Era, and the Cenozoic Era. The Mesozoic Era is the only era where dinosaurs were alive. In this era three mass extinctions happened. The Earth has only had five mass extinctions.</string>
    <string name="triassic">Triassic</string>
    <string name="_252to201_million_years_ago">252 – 201 million years ago</string>
    <string name="triassic_info_text">The Triassic is the first period in the Mesozoic Era. This period began after Earth’s worst mass extinction. The extinction killed almost 90% of all life. However, life recovered during the Triassic. The first dinosaurs appeared during this period. These dinosaurs were smaller than most dinosaurs.</string>
    <string name="jurassic">Jurassic</string>
    <string name="_201to145_million_years_ago">201 – 145 million years ago</string>
    <string name="jurassic_info_text">The Jurassic is the second period in the Mesozoic Era. This period began after a mass extinction. The extinction killed 76% of life in the water and 20% of life on the land. During this time, dinosaurs began to get bigger and more dangerous.</string>
    <string name="cretaceous">Cretaceous</string>
    <string name="_145to66_million_years_ago">145 – 66 million years ago</string>
    <string name="cretaceous_info_text">The Cretaceous is the third and last period in the Mesozoic Era. During this time, dinosaurs became the main species. Dinosaurs also got the biggest they ever were. However, the Cretaceous ended with an asteroid hitting Earth. This asteroid created a mass extinction that killed all the dinosaurs.</string>
    <string name="age_of_dinosaurs_image_desc">A beautiful forest during the Mesozoic Era.</string>
    <string name="cretaceous_paleogene_extinction">Cretaceous-Paleogene Extinction</string>
    <string name="cause">Cause</string>
    <string name="when">When</string>
    <string name="_66_million_years_ago">66 million years ago</string>
    <string name="killed">Killed</string>
    <string name="_75_of_all_species">75% of all species</string>
    <string name="chicxulub_impactor">Chicxulub Impactor</string>
    <string name="landed">Landed</string>
    <string name="yucatan_peninsula">Yucatan Peninsula</string>
    <string name="extinction_general_text">66 million years ago, during the Mesozoic Era, a bright light appears in the sky as an asteroid larger than Mount Everest races toward Earth at around 20 miles a second (THAT\'S AROUND 70,000 MILES AN HOUR). Seconds later, the asteroid hits the shallow waters near the Yucatan Peninsula. Any living thing, plant or animal, around 100 miles away from the Yucatan Peninsula dies instantly. The dinosaurs that weren’t killed instantly from the impact eventually die from a devastating winter that lasted two decades.</string>
    <string name="extinction_image_desc">Asteroid in the sky moving towards a forest</string>
    <string name="fast_chaos">Fast Chaos</string>
    <string name="fast_chaos_text">Chicxulub Impactor lights up brighter than the Sun as it plummets towards Earth with a top speed 150 times faster than a plane today. A bright ball of light reaching the clouds is seen as Chichxulub Impactor hits Earth with the power of 10 billion atomic bombs. A ring of extreme heat is sent over 1,000 miles in every direction, disintegrating any living thing it touches. All water nearby is pushed away or evaporated, revealing the ocean’s floor for 100s of miles. An earthquake almost 50 times more powerful than the strongest earthquake in human history is immediately sent out, with even the other side of Earth experiencing the ground shake. However, the worst has not yet happened until a shockwave of extreme heat traveling 600 miles an hour is sent across the whole world. The shockwave burns anything it touches for thousands of miles and even heats up the opposite side of the world to deadly temperatures. All animals that were unable to find shelter die almost immediately.</string>
    <string name="slow_chaos">Slow Chaos</string>
    <string name="slow_chaos_text">The temperature of Earth eventually starts to cool down as a large cloud of ash surrounds the entire planet in a cold darkness. The cloud blocks all light from the Sun for weeks, eventually killing all plant life and almost all plankton. Since plankton was the main source of food in the ocean, all large ocean predators die from starvation. Not only does most life in the ocean die off, but all remaining large animals, including dinosaurs, that survived the asteroid impact eventually die off from starvation as a harsh winter covers the entire Earth for decades.</string>
    <string name="life_finds_text">Over 20 years after Chicxulub Impactor struck the Earth, the world begins to warm up and slowly return to normal conditions. Small species that could eat very small amounts of food survived the harsh conditions and start to re-populate the Earth. Surviving seeds in the ground start to grow into beautiful plants providing food for all remaining animals. The dominant species on the planet is no longer large, magnificent dinosaurs but, instead, small mammals like rats that were able to find shelter underground from the initial heat and the harsh winter that followed. However, dinosaurs weren’t completely dead. A direct descendant of the magnificent dinosaurs survived. This surviving descendant of the dinosaurs is known as a bird and is still living today. While this event was one the most tragic extinctions in history, it led to both you and me walking the Earth as the apex predator of today.</string>
    <string name="life_always_finds_a_way">Life Always Finds A Way</string>
</resources>