<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/extinction_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/headerTextStyle"
                android:textSize="30sp"
                android:text="@string/cretaceous_paleogene_extinction"
                android:textAlignment="center"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/thick_border">

                <TextView
                    android:id="@+id/extinction_when_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?attr/headerTextStyle"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:text="@string/when" />

                <TextView
                    android:id="@+id/extinction_when_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    style="?attr/freeBodyTextStyle"
                    android:textAlignment="center"
                    android:text="@string/_66_million_years_ago" />

                <TextView
                    android:id="@+id/extinction_killed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?attr/headerTextStyle"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/killed" />

                <TextView
                    android:id="@+id/extinction_killed_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    style="?attr/freeBodyTextStyle"
                    android:textAlignment="center"
                    android:text="@string/_75_of_all_species" />

                <TextView
                    android:id="@+id/extinction_cause_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?attr/headerTextStyle"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/cause" />

                <TextView
                    android:id="@+id/extinction_cause_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    style="?attr/freeBodyTextStyle"
                    android:textAlignment="center"
                    android:text="@string/chicxulub_impactor" />

                <TextView
                    android:id="@+id/extinction_landed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    style="?attr/headerTextStyle"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/landed" />

                <TextView
                    android:id="@+id/extinction_landed_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    style="?attr/freeBodyTextStyle"
                    android:textAlignment="center"
                    android:text="@string/yucatan_peninsula" />
            </LinearLayout>

            <TextView
                android:id="@+id/extinction_text"
                style="?attr/bodyTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/thin_border"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp"
                android:text="@string/extinction_general_text"
                android:textAlignment="center"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />


            <androidx.cardview.widget.CardView
                android:id="@+id/dinosaur_extinction_card"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/extinction_image_desc"
                    android:src="@drawable/dinosaur_extinction" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/home_card_outline"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                style="?attr/headerTextStyle"
                android:text="@string/fast_chaos"/>

            <TextView
                android:id="@+id/fast_chaos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/thin_border"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="32dp"
                style="?attr/bodyTextStyle"
                android:paddingEnd="32dp"
                android:textAlignment="center"
                android:text="@string/fast_chaos_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                style="?attr/headerTextStyle"
                android:text="@string/slow_chaos"/>

            <TextView
                android:id="@+id/slow_chaos_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/thin_border"
                android:paddingTop="16dp"
                style="?attr/bodyTextStyle"
                android:paddingBottom="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textAlignment="center"
                android:text="@string/slow_chaos_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                style="?attr/headerTextStyle"
                android:text="@string/life_always_finds_a_way"/>

            <TextView
                android:id="@+id/life_finds_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/thin_border"
                android:paddingTop="16dp"
                style="?attr/bodyTextStyle"
                android:paddingBottom="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textAlignment="center"
                android:text="@string/life_finds_text"/>
        </LinearLayout>
    </ScrollView>
</layout>