<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".QuizNextFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.dinoappv2.viewModels.DinoArticleViewModel" />

        <variable
            name="fragment"
            type="com.example.dinoappv2.QuizNextFragment" />

    </data>

    <ScrollView
        android:layout_width="304dp"
        android:layout_height="320dp"
        android:padding="16dp"
        android:background="@drawable/quiz_shape">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/quiz_title_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tyrannosaurus Rex Quiz"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quiz_question_next"
            android:text="How strong is the T-Rex's bite force?"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@id/quiz_title_next"
            app:layout_constraintTop_toBottomOf="@id/quiz_title_next"/>

        <RadioGroup
            android:id="@+id/quiz_radio_group_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="@{() -> viewModel.setQuizButton(true)}"
            app:layout_constraintStart_toStartOf="@id/quiz_question_next"
            app:layout_constraintTop_toBottomOf="@id/quiz_question_next" >
            <RadioButton
                android:id="@+id/quiz_radio_button_0_next"
                android:text="@string/answer"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:onClick="@{() -> viewModel.setRadioButtonClicked(0)}"/>
            <RadioButton
                android:id="@+id/quiz_radio_button_1_next"
                android:text="@string/test"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:onClick="@{() -> viewModel.setRadioButtonClicked(1)}"/>
            <RadioButton
                android:id="@+id/quiz_radio_button_2_next"
                android:text="@string/test"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:onClick="@{() -> viewModel.setRadioButtonClicked(2)}"/>
            <RadioButton
                android:id="@+id/quiz_radio_button_3_next"
                android:text="@string/test"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:onClick="@{() -> viewModel.setRadioButtonClicked(3)}"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quiz_finish_button_next"
            style="@style/classicButton"
            android:onClick="@{() -> fragment.nextButtonClicked()}"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/next"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="end"/>

    </LinearLayout>

    </ScrollView>

</layout>